HelloUltraviolet/Fixtures/RejectedSource/Expressions/TupleIndexOutOfBounds/Expected.uv
//! Expected diagnostic metadata for the TupleIndexOutOfBounds rejected-source specimen.

expectedDiagnostic("E-TYP-1801", "TupleIndex-OOB")
expectedDiagnostic("E-TYP-1801", "diagnostics.Tuples")
